--- a/express/views/home/index.ejs
+++ b/express/views/home/index.ejs
@@ -1,2 +1,8 @@
+<%- include('../inc/top') %>
 
-<h1> Trang chủ </h1>
+<div class="row">
+    <h1> Trang chủ </h1>
+    <h2>Nội dung</h2>
+</div>
+
+<%- include('../inc/bottom') %>
