--- a/express/views/sanpham/add.ejs
+++ b/express/views/sanpham/add.ejs
@@ -1,2 +1,5 @@
-
-<h1> Add sp </h1>
+<%- include('../inc/top') %>
+<div class="row">
+    <h2>Thêm sản phẩm</h2>
+</div>
+<%- include('../inc/bottom') %>
