--- a/express/views/sanpham/list.ejs
+++ b/express/views/sanpham/list.ejs
@@ -1,2 +1,6 @@
+<%- include('../inc/top') %>
 
-<h1>List SP </h1>
+<div class="row">
+    <h2>Danh sách sản phẩm</h2>
+</div>
+<%- include('../inc/bottom') %>
