--- a/express/views/inc/top.ejs
+++ b/express/views/inc/top.ejs
@@ -10,5 +10,9 @@
     <div class="container">
 
         <div class="row bg-primary">
-            <h1>Đầu trang </h1>
+            <h1>Đầu trang  
+                <% if(typeof(tieude) != 'undefined') {%> 
+                         <%= tieude %> 
+                 <% } %>
+            </h1>
         </div>
